--- a/style_acceuil.css
+++ b/style_acceuil.css
@@ -3,30 +3,39 @@ h1, h3{
 
 }
 p{
-    font-family: 'Arsenal', sans-serif;
-
+    font-family: 'Poppins', sans-serif;
+    margin-top: 5px;
 }
 
-    @font-face {
-        font-family: 'sofia_regular', "sans-serif";
-        src: url('sofia_regular.otf')
-}
-
+/*MENU NAVIGATION*/
 .navbar{
     background-color: #0c0c0d;
+    font-family: 'Poppins', sans-serif;
+    color: #444444;
 }
 
+.navbar-brand{
+    margin-left: 2%;
+}
+
+.navbar-nav{
+    width: 100%;
+    justify-content: flex-end;
+    margin-right: 10%;
+}
+/* FIN MENU*/
+/*CONTENU BOOSTRAPP*/
 .section1{
     background-color: #0c0c0d;
     margin-top: 50px;
  }
 
-.presentation{
+#presentation{
     padding: 2em;
     color: white;
     text-align: center;
 }
-.parcours{
+#parcours{
     color: #0c0c0d;
     text-align: center;
     padding: 2em;
@@ -34,17 +43,18 @@ p{
 .section3{
     background-color: #0c0c0d;
 }
-.creation{
+#creation{
     color: white;
     text-align: center;
     padding: 2em;
 }
-.contact{
+#contact{
     padding: 2em;
 }
 .adresse{
     margin-top: 7%;
 }
+/*FIN BOOSTRAPP*/
 /*FORMULAIRE*/
 
   form div + div {
@@ -88,8 +98,14 @@ height: 100px;
       width: 120px;
       background-color: #0c0c0d;
       color:white;
+      font-family: 'Poppins', sans-serif;
   }
-  /*FIN FORMULAIRE*/
+  label{
+    font-family: 'Poppins', sans-serif;
+}
+/*FIN FORMULAIRE*/
+
+  /*footer*/
 .logo_reseaux{
 height: 100px;
 width: 100px;
@@ -102,6 +118,34 @@ text-align: center;
 
 .logo{
     text-align: center;
-    color: white;
+    color: #444444;
     padding: 2em;
+    margin-top: 5%;
 }
+
+/* FIN FOOTER*/
+
+/* EFFET SOULIGNEMENT*/
+h1{display:inline-block;min-width:50px;}
+h1 {
+    text-decoration:none;
+    line-height: 70px;
+    padding: 0 10px;
+    text-align: center;
+    color: #444444;
+    text-transform: uppercase;
+}
+h1:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 1px;
+	width: 0;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+h1:hover:after {
+	width: 90%;
+	background: #444;
+}
+/* FIN EFFET*/
