--- a/style_accueil.css
+++ b/style_accueil.css
@@ -1,6 +1,8 @@
 h1, h3{
     font-family: 'Playfair Display SC', serif;
-
+}
+.parcours{
+    color : black;
 }
 p{
     font-family: 'Poppins', sans-serif;
@@ -11,7 +13,6 @@ p{
 .navbar{
     background-color: #0c0c0d;
     font-family: 'Poppins', sans-serif;
-    color: #444444;
 }
 
 .navbar-brand{
@@ -26,19 +27,23 @@ p{
 /* FIN MENU*/
 /*CONTENU BOOSTRAPP*/
 .section1{
-    background-color: #0c0c0d;
-    margin-top: 75px;
+    /* background-color: #0c0c0d; */
+    background-image: url(img/marbre.jpg);
+    height: 800px;
  }
 
 #presentation{
     padding: 2em;
     color: white;
     text-align: center;
+    padding-top: 250px;
+
 }
 #parcours{
     color: #0c0c0d;
     text-align: center;
     padding: 2em;
+    padding-top: 75px;
 }
 .section3{
     background-color: #0c0c0d;
@@ -47,6 +52,7 @@ p{
     color: white;
     text-align: center;
     padding: 2em;
+    padding-top: 75px;
 }
 
 .capture{
@@ -56,6 +62,7 @@ p{
 }
 #contact{
     padding: 2em;
+    padding-top: 75px;
 }
 .adresse{
     margin-top: 7%;
@@ -130,7 +137,10 @@ text-align: center;
     text-align: center;
     color: #444444;
     padding: 2em;
-    margin-top: 5%;
+    margin-top: 3%;
+}
+.cv{
+    padding-top: 2em;
 }
 
 /* FIN FOOTER*/
@@ -142,7 +152,7 @@ h1 {
     line-height: 70px;
     padding: 0 10px;
     text-align: center;
-    color: #444444;
+    color: white;
     text-transform: uppercase;
 }
 h1:after {
