--- a/style_accueil.css
+++ b/style_accueil.css
@@ -1,18 +1,168 @@
-h1, h3{
-    font-family: 'Playfair Display SC', serif;
-}
-.parcours{
-    color : black;
-}
-p{
-    font-family: 'Poppins', sans-serif;
-    margin-top: 5px;
+body {
+    background: #ffffff;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    overflow-x: hidden;
 }
 
-/*MENU NAVIGATION*/
+h1,h2,h3,h4,h5,h6 {
+    font-style: normal;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+  }
+  
+  h1 {
+      font-size: 62px;
+      padding-bottom: 14px;
+      margin-bottom: 0px;
+      font-family: 'Playfair Display SC', serif;
+  }
+  
+  h2 {
+    font-size: 32px;
+    line-height: 46px;
+  }
+  
+  h3 {
+    font-size: 26px;
+  }
+  
+  h4 {
+    color: #666;
+    font-size: 12px;
+    font-weight: normal;
+    letter-spacing: 2px;
+  }
+  
+  p {
+      color: #777;
+      font-size: 15px;
+      font-weight: 300;
+      line-height: 26px;
+      letter-spacing: 0.2px;
+  }
+
+.img-responsive{
+    max-width: 100%;
+    height: auto;
+}
+
+/*---------------------------------------
+    General               
+-----------------------------------------*/
+
+html{
+  -webkit-font-smoothing: antialiased;
+}
+
+a {
+  color: #4d638c;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  text-decoration: none !important;
+}
+a:hover, a:active, a:focus {
+  color: #4d638c;
+  outline: none;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#portfolio,
+#about,
+#contact {
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
+
+.section-title {
+  position: relative;
+  padding-bottom: 62px;
+  text-align: center;
+}
+
+.section-title h3 {
+  color: #555;
+  font-weight: 400;
+  letter-spacing: 4px;
+}
+
+/*---------------------------------------
+    Preloader section              
+-----------------------------------------*/
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  background: none repeat scroll 0 0 #ffffff;
+}
+
+.sk-spinner-wordpress.sk-spinner {
+  background-color: #bdc3c7;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  position: relative;
+  -webkit-animation: sk-innerCircle 1s linear infinite;
+  animation: sk-innerCircle 1s linear infinite; 
+}
+
+.sk-spinner-wordpress .sk-inner-circle {
+  display: block;
+  background-color: #ffffff;
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  border-radius: 8px;
+  top: 5px;
+  left: 5px; 
+}
+
+@-webkit-keyframes sk-innerCircle {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+@keyframes sk-innerCircle {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+/**********************************************MENU NAVIGATION****************************/
 .navbar{
-    background-color: #0c0c0d;
+    /* background-color: #0c0c0d; */
     font-family: 'Poppins', sans-serif;
+    background-color: #101010;
+    
 }
 
 .navbar-brand{
@@ -23,138 +173,117 @@ p{
     width: 100%;
     justify-content: flex-end;
     margin-right: 10%;
+    
 }
 /* FIN MENU*/
-/*CONTENU BOOSTRAPP*/
-.section1{
-    /* background-color: #0c0c0d; */
-    background-image: url(img/marbre.jpg);
-    height: 800px;
- }
+
+/********************************************SECTION 1******************************/
 
 #presentation{
     padding: 2em;
-    color: white;
     text-align: center;
     padding-top: 250px;
+    
+}
 
+#presentation hr{
+  width: 82px;
+  margin-top: 32px;
+}
+
+/*************************************** SECTION 2 ************************************/
+.section2{
+    height: 100%;
+    width: 100%;
 }
 #parcours{
-    color: #0c0c0d;
+    
+    padding: 2em;
+    padding-top: 75px;
+}
+
+#div_parcours{
     text-align: center;
-    padding: 2em;
-    padding-top: 75px;
 }
-.section3{
-    background-color: #0c0c0d;
+.titre_parcours{
+    color: #101010;
 }
-#creation{
-    color: white;
+
+/*---------------------------------------
+   Portfolio section              
+-----------------------------------------*/
+
+#portfolio small {
+    color: #f0f0f0;
+    font-size: 10px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+  
+  #portfolio .portfolio-thumb {
+    position: relative;
+    padding: 0;
+    margin-top: 32px;
+  }
+  
+  #portfolio .portfolio-thumb .portfolio-overlay {
+    position: absolute;
+    background: #222;
+    color: #ffffff;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    padding: 2em;
-    padding-top: 75px;
-}
-
-.capture{
-    width: 250px;
-    height: 250px;
-    padding: 2em;
-}
-#contact{
-    padding: 2em;
-    padding-top: 75px;
-}
-.adresse{
-    margin-top: 7%;
-}
-/*FIN BOOSTRAPP*/
-/*FORMULAIRE*/
-
-  form div + div {
-    margin-top: 1em;
+    vertical-align: top;
+    opacity: 0;
+    transition: all 0.4s ease-in-out;
   }
   
-  label {
-    /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
-    display: inline-block;
-    width: 90px;
-    margin-bottom: 0;
-    margin-top: 1%;
+  #portfolio .portfolio-item {
+      position: absolute;
+      top:50%;
+      left: 50%;
+      -webkit-transform:translate(-50%,-50%);
+        -ms-transform:translate(-50%,-50%);
+            transform:translate(-50%,-50%);
   }
   
-  input, textarea {
-    /* Pour s'assurer que tous les champs texte ont la même police.
-       Par défaut, les textarea ont une police monospace */
-    font: 1em sans-serif;
-    font-weight:bold;
-
-    /* Pour que tous les champs texte aient la même dimension */
-    width: 70%;
-    height: 25px;
-    box-sizing: border-box;
-    /* Pour harmoniser le look & feel des bordures des champs texte */
-    border: 1px solid #0c0c0d;
-  }
- #message{
-height: 100px;
+  #portfolio .portfolio-thumb:hover .portfolio-overlay {
+    opacity: 0.9;
   }
   
-  .texte_carre{
-    resize: none;
+  #portfolio .text-center {
+    padding-top: 62px;
   }
 
-  .form
-  {
-      color:#0c0c0d;
-      font-family: 'Orbitron', sans-serif;
-      font-weight:bold;
-      font-size: 13px;
-  }
-  #bouton_envoi{
-      margin-top: 5%;
-      width: 120px;
-      background-color: #0c0c0d;
-      color:white;
-      font-family: 'Poppins', sans-serif;
-  }
-  label{
-    font-family: 'Poppins', sans-serif;
-}
-/*FIN FORMULAIRE*/
-
-  /*footer*/
+  /***************************************************FOOTER*****************************/
 .logo_reseaux{
 height: 100px;
 width: 100px;
 padding: 1em;
 }
-.reseaux{
+
+#reseaux{
 padding: 2em;
 text-align: center;
 }
 
-.logo{
+.text_footer{
     text-align: center;
-    color: #444444;
+    color: #a4a4a4;
     padding: 2em;
     margin-top: 3%;
 }
-.cv{
-    padding-top: 2em;
-}
 
-/* FIN FOOTER*/
 
-/* EFFET SOULIGNEMENT*/
+/***************************************************** FIN FOOTER********************************/
+
+/******************************************** EFFET SOULIGNEMENT**********************************/
 h1{display:inline-block;min-width:50px;}
-h1 {
-    text-decoration:none;
-    line-height: 70px;
-    padding: 0 10px;
-    text-align: center;
-    color: white;
-    text-transform: uppercase;
-}
+
 h1:after {
 	content: '';
 	display: block;
@@ -164,11 +293,11 @@ h1:after {
 	background: transparent;
 	transition: width .6s ease, background-color .6s ease;
 }
+
 h1:hover:after {
 	width: 90%;
 	background: #444;
 }
-
 
 .titre{min-width:50px;}
 .titre {
@@ -176,9 +305,10 @@ h1:hover:after {
     line-height: 35px;
     padding: 0 10px;
     text-align: center;
-    color: white;
+    color: black;
     text-transform: uppercase;
 }
+
 .titre:after {
 	content: '';
 	display: block;
@@ -188,8 +318,51 @@ h1:hover:after {
 	background: transparent;
 	transition: width .6s ease, background-color .6s ease;
 }
+
 .titre:hover:after {
 	width: 40%;
 	background: #444;
 }
 /* FIN EFFET*/
+
+/*---------------------------------------
+   Contact section              
+-----------------------------------------*/
+#contact{
+  padding-top: 200px;
+}
+
+#contact .col-md-6,
+#contact .col-md-12 {
+  padding-left: 0px;
+}
+
+#contact .form-control {
+  border: 1px solid #f0f0f0;
+  box-shadow: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  transition: all 0.4s ease-in-out;
+}
+
+#contact .form-control:hover {
+  border-color: #777;
+}
+
+#contact input,
+#contact select {
+  height: 50px;
+}
+
+#contact input[type="submit"] {
+  background: #222;
+  border-radius: 100px;
+  border: none;
+  color: #ffffff;
+  font-weight: 400;
+  transition: all 0.4s ease-in-out;
+}
+
+#contact input[type="submit"]:hover {
+  background: #000;
+}
