--- a/style_accueil.css
+++ b/style_accueil.css
@@ -61,6 +61,12 @@ h1,h2,h3,h4,h5,h6 {
   padding-bottom: 120px;
 }
 
+@media screen and (max-width: 768px) {
+  h1{
+      font-size:30px;
+  }
+}
+
 /*---------------------------------------
     Preloader section              
 -----------------------------------------*/
